--- a/sub4.html
+++ b/sub4.html
@@ -4,7 +4,7 @@ layout: default
 <!-- 메인영역 -->
 <section id="sub-article">
 	<style type="text/css">
-		@import url('../webfontworld.github.io/sunn/SUIT.css');
+		@import url('assets/css/SUIT.css');
 
 		section#sub-article {
 			padding: 0 0 0 0 !important;
