--- a/index.html
+++ b/index.html
@@ -44,3 +44,46 @@ layout: default
 	<!-- //메인내 메뉴 버튼 영역 -->
 </div>
 <!-- //메인영역 -->
+
+<!-- Pop-up Modal -->
+<div id="popup-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full">
+  <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
+    <div class="mt-3 text-center">
+      <div class="mx-auto flex items-center justify-center h-96 w-96">
+        <!-- Pop-up Image -->
+        <img src="assets/images/pop_up_01.png" alt="Pop-up Image" class="h-auto max-w-full">
+      </div>
+      <!-- Pop-up Options -->
+      <div class="items-center px-4 py-3 flex justify-between">
+        <label for="no-show" class="flex items-center cursor-pointer text-sm">
+          <input type="checkbox" id="no-show" class="mr-2">
+          오늘 하루 열지 않기
+        </label>
+        <button class="px-4 py-2 bg-gray-500 text-white text-base font-medium rounded-md w-20 shadow-sm hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-300" onclick="closePopup()">닫기</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  // JavaScript to handle the pop-up logic
+  window.onload = function() {
+    // Check if the 'doNotShow' is set in localStorage and not expired
+    const doNotShow = localStorage.getItem('doNotShow');
+    if (!doNotShow || new Date(doNotShow) < new Date()) {
+      document.getElementById('popup-modal').classList.remove('hidden');
+    }
+  };
+
+  // Function to close the popup and potentially set 'doNotShow'
+  function closePopup() {
+    const noShowChecked = document.getElementById('no-show').checked;
+    if (noShowChecked) {
+      // Set 'doNotShow' in localStorage with the current time + 1 day
+      const tomorrow = new Date();
+      tomorrow.setDate(tomorrow.getDate() + 1);
+      localStorage.setItem('doNotShow', tomorrow);
+    }
+    document.getElementById('popup-modal').classList.add('hidden');
+  }
+</script>
