--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ layout: default
 <!-- //메인영역 -->
 
 <!-- Pop-up Modal -->
+<link rel="stylesheet" href="assets/css/newpop.css">
 <div id="popup-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full">
   <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
     <div class="mt-3 text-center">
