--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@ layout: default
 <!-- //메인영역 -->
 
 <!-- Pop-up Modal -->
-<link rel="stylesheet" href="assets/css/newpop.css">
 <div id="popup-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full">
   <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
     <div class="mt-3 text-center">
@@ -87,4 +86,90 @@ layout: default
     }
     document.getElementById('popup-modal').classList.add('hidden');
   }
+
+  document.addEventListener('DOMContentLoaded', (event) => {
+  // Create style element
+  var style = document.createElement('style');
+  document.head.appendChild(style);
+  style.type = 'text/css';
+  style.innerHTML = `
+    .popup-modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+      overflow-y: auto;
+    }
+    .popup-content {
+      background: white;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+      width: 400px;
+      height: 560px;
+      max-width: 96%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+    }
+    .popup-image {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+    .popup-options {
+      display: flex;
+      justify-content: space-between;
+      margin-top: auto;
+      align-items: center;
+    }
+    .no-show-label {
+      display: flex;
+      align-items: center;
+    }
+    .close-btn {
+      border: none;
+      background: #333;
+      color: white;
+      padding: 8px 16px;
+      cursor: pointer;
+      border-radius: 5px;
+      position: absolute;
+      top: -10px;
+      right: -10px;
+    }
+    @media (max-width: 480px) {
+      .popup-content {
+        width: 90%;
+        height: auto;
+      }
+    }
+  `;
+
+  // Check if 'doNotShow' is set in localStorage and not expired
+  const doNotShow = localStorage.getItem('doNotShow');
+  if (!doNotShow || new Date(doNotShow) < new Date()) {
+    document.getElementById('popup-modal').style.display = 'flex';
+  }
+});
+
+// Function to close the popup and potentially set 'doNotShow'
+function closePopup() {
+  const noShowChecked = document.getElementById('no-show').checked;
+  if (noShowChecked) {
+    // Set 'doNotShow' in localStorage with the current time + 1 day
+    const tomorrow = new Date();
+    tomorrow.setDate(tomorrow.getDate() + 1);
+    localStorage.setItem('doNotShow', tomorrow.toISOString());
+  }
+  document.getElementById('popup-modal').style.display = 'none';
+}
+
 </script>
+
